# pw

./: .bumpversion.cfg  .coveragerc  .gitignore  .gitmodules  .travis-requirements.txt  .travis.yml  CONTRIBUTORS  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  PUBLISH  PUBLISH.md  README  README.markdown  README.md  README.txt  pw  pw.py  pw.sublime-project  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
pw/: __init__.py  __main__.py  _gpg.py  _yaml.py  cli.py  store.py
python/pw/: cli.py
scripts/: pw
test/: add_a_line.py  conftest.py  db.pw  db.pw.asc  db.pw.gpg  db.yaml  db.yaml.asc  db.yaml.gpg  passwords.yaml  test_cli.py  test_gpg.py  test_pw.py  test_store.py
test/keys/: pubring.gpg  secring.gpg  trustdb.gpg
