[tool.poetry]
name = "pw"
version = "0.14.1"
description = "Search in GPG-encrypted password file."
authors = ["Michael Walter <michael.walter@gmail.com>"]
license = "MIT"
homepage = "https://github.com/catch22/pw"
classifiers = ["Environment :: Console"]
readme = "README.md"

[tool.poetry.scripts]
pw = 'pw.__main__:pw'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
colorama = "^0.4.6"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
bumpversion = "^0.6.0"
mypy = "^1.8.0"
